tests/0007-assignment-prefix-operator.src.err
ERROR: not yet implemented
 | not a = "value";
           ^
COMPILATION FAILED
